--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,10 @@
         app:itemTextColor="@color/black"
         android:layout_marginBottom="-3dp"
         android:background="#F4F4F4"
-        app:itemTextAppearanceActive="@color/active_indicator"
-        app:itemActiveIndicatorStyle="@color/active_indicator"
+        app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
+        app:itemActiveIndicatorStyle="@style/BottomNavigationViewTextStyle"
         app:itemIconTint="#4440BC"
+        app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
