--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -3,26 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main2"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#F4F4F4"
     tools:context=".notes.UpdateNoteActivity">
-
-    <TextView
-        android:id="@+id/addNoteHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/andika"
-        android:text="@string/add_note"
-        android:textColor="@color/blue"
-        android:textSize="24sp" />
 
     <ImageView
         android:id="@+id/passwordSetter"
@@ -32,171 +19,191 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="99dp"
-        android:layout_toStartOf="@+id/updateSaveButton"
-        android:layout_toEndOf="@+id/addNoteHeading"
         android:src="@drawable/ic_password" />
-
-    <TextView
-        android:id="@+id/updateDate"
-        android:layout_width="261dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="3dp"
-        android:layout_toStartOf="@+id/updateSaveButton"
-        android:fontFamily="@font/adamina"
-        android:textColor="#606060"
-        android:textSize="11sp" />
-
-    <Button
-        android:id="@+id/updateSaveButton"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_alignTop="@id/addNoteHeading"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="6dp"
-        android:text="Save"
-        android:textColor="@color/buttonDisabledColor"
-        app:backgroundTint="@android:color/transparent" />
-
-    <EditText
-        android:id="@+id/updateTitleEditText"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/addNoteHeading"
-        android:layout_marginTop="45dp"
-        android:fontFamily="@font/adamina"
-        android:hint="@string/title"
-        android:textColorHint="#606060"
-        android:textColor="@color/black"
-        android:backgroundTint="@android:color/transparent"
-        android:inputType="textCapSentences"
-        android:maxLines="1"
-        android:textStyle="bold"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/updateWordCount"
-        android:layout_width="70dp"
-        android:layout_height="20dp"
-        android:layout_below="@+id/updateTitleEditText"
-        android:layout_alignStart="@+id/charCountUpdate"
-        android:layout_marginStart="-77dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="2dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textIsSelectable="false" />
-    <TextView
-        android:id="@+id/charCountUpdate"
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:layout_below="@+id/updateTitleEditText"
-        android:layout_alignEnd="@+id/updateContentEditText"
-        android:layout_marginStart="10dp"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textIsSelectable="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="2dp"/>
-
-    <EditText
-        android:id="@+id/updateContentEditText"
-        android:layout_width="396dp"
-        android:layout_height="1000dp"
-        android:layout_below="@+id/updateTitleEditText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/adamina"
-        android:backgroundTint="@android:color/transparent"
-        android:gravity="top"
-        android:hint="@string/description"
-        android:textColorHint="#606060"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:capitalize="sentences"/>
-    <LinearLayout
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:background="@color/white">
-
-        <Button
-            android:id="@+id/boldButton"
-            android:layout_width="56dp"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:fontFamily="@font/adamina"
-            android:text="B"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/italicButton"
-            android:layout_width="56dp"
-            android:background="@android:color/transparent"
-            android:layout_height="wrap_content"
-            android:textStyle="italic"
-            android:textColor="@color/black"
-            android:fontFamily="@font/adamina"
-            android:text="I" />
-        <LinearLayout
-            android:id="@+id/underline"
-            android:layout_width="56dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/updateDate"
+                android:layout_width="261dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="135dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginStart="3dp"
+                android:fontFamily="@font/indie_flower"
+                android:textColor="#606060"
+                android:textSize="11sp" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="13dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="17dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/underline" />
-        </LinearLayout>
+            <Button
+                android:id="@+id/updateSaveButton"
+                android:layout_width="95dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="5dp"
+                android:text="Save"
+                android:textSize="18sp"
+                android:fontFamily="@font/indie_flower"
+                android:textColor="@color/buttonDisabledColor"
+                app:backgroundTint="@android:color/transparent" />
 
-        <LinearLayout
-            android:id="@+id/bullets"
-            android:layout_width="52dp"
-            android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/updateTitleEditText"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="0dp"
+                android:backgroundTint="@android:color/transparent"
+                android:fontFamily="@font/indie_flower"
+                android:hint="@string/title"
+                android:inputType="textCapSentences"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textColorHint="#606060"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="15dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_bullets" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/attachment"
-            android:layout_width="52dp"
-            android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/updateContentEditText"
+                android:layout_width="395dp"
+                android:layout_height="650dp"
+                android:layout_below="@+id/updateTitleEditText"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="22dp"
+                android:backgroundTint="@android:color/transparent"
+                android:capitalize="sentences"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="top"
+                android:hint="@string/description"
+                android:textColor="@color/black"
+                android:textColorHint="#606060"
+                android:textSize="17.5sp" />
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="29dp"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="10dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_attachment" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/voiceRecorder"
-            android:layout_width="52dp"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="20dp"
+            <TextView
+                android:id="@+id/charCountUpdate"
+                android:layout_width="100dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="14dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_mic" />
-        </LinearLayout>
+                android:layout_below="@+id/updateTitleEditText"
+                android:layout_alignEnd="@+id/updateContentEditText"
+                android:layout_marginStart="10dp"
+                android:textAlignment="center"
+                android:fontFamily="@font/indie_flower"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textIsSelectable="false"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/updateWordCount"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
+                android:layout_below="@+id/updateTitleEditText"
+                android:layout_alignStart="@+id/charCountUpdate"
+                android:layout_marginStart="-77dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"
+                android:textAlignment="center"
+                android:fontFamily="@font/indie_flower"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textIsSelectable="false" />
+        </RelativeLayout>
 </RelativeLayout>
+    <!--<LinearLayout-->
+    <!--android:id="@+id/toolbar"-->
+    <!--android:layout_width="395dp"-->
+    <!--android:layout_height="49dp"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:background="@color/white"-->
+    <!--android:orientation="horizontal"-->
+    <!--android:visibility="gone">-->
+
+    <!--<Button-->
+    <!--    android:id="@+id/boldButton"-->
+    <!--    android:layout_width="57dp"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:background="@android:color/transparent"-->
+    <!--    android:fontFamily="@font/adamina"-->
+    <!--    android:text="B"-->
+    <!--    android:textColor="@color/black"-->
+    <!--    android:textStyle="bold" />-->
+
+    <!--<LinearLayout-->
+    <!--    android:layout_width="52dp"-->
+    <!--    android:layout_height="match_parent">-->
+
+    <!--    <Button-->
+    <!--        android:id="@+id/italicButton"-->
+    <!--        android:layout_width="56dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:fontFamily="@font/adamina"-->
+    <!--        android:text="I"-->
+    <!--        android:textColor="@color/black"-->
+    <!--        android:textStyle="italic" />-->
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+    <!--    android:id="@+id/underline"-->
+    <!--    android:layout_width="52dp"-->
+    <!--    android:layout_height="match_parent">-->
+
+    <!--    <ImageView-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="13dp"-->
+    <!--        android:layout_marginStart="16dp"-->
+    <!--        android:layout_marginTop="18dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:contentDescription="hkk"-->
+    <!--        android:src="@drawable/underline" />-->
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+    <!--    android:id="@+id/bullets"-->
+    <!--    android:layout_width="52dp"-->
+    <!--    android:layout_height="match_parent">-->
+
+    <!--    <ImageView-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="15dp"-->
+    <!--        android:layout_marginStart="18dp"-->
+    <!--        android:layout_marginTop="16dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:src="@drawable/ic_bullets" />-->
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+    <!--    android:id="@+id/attachment"-->
+    <!--    android:layout_width="52dp"-->
+    <!--    android:layout_height="match_parent">-->
+
+    <!--    <ImageView-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="29dp"-->
+    <!--        android:layout_marginStart="17dp"-->
+    <!--        android:layout_marginTop="10dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:src="@drawable/ic_attachment" />-->
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+    <!--    android:id="@+id/voiceRecorder"-->
+    <!--    android:layout_width="52dp"-->
+    <!--    android:layout_height="match_parent">-->
+
+    <!--    <ImageView-->
+    <!--        android:layout_width="20dp"-->
+    <!--        android:layout_height="20dp"-->
+    <!--        android:layout_marginStart="17dp"-->
+    <!--        android:layout_marginTop="14dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:src="@drawable/ic_mic" />-->
+    <!--</LinearLayout>-->
+
+    <!--</LinearLayout>-->
