--- a/app/src/main/res/layout/empty_categories_activity.xml
+++ b/app/src/main/res/layout/empty_categories_activity.xml
@@ -16,8 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Folders are stored here!"
-        android:fontFamily="@font/adamina"
+        android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="19sp" />
 
 </LinearLayout>
