--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:text="Folder Name"
                 android:textColor="@color/blue"
-                android:textSize="16sp"
+                android:fontFamily="@font/indie_flower"
+                android:textSize="17sp"
                 android:textStyle="bold"/>
             <ImageView
                 android:id="@+id/rigggeeeeddddd"
